--- a/templates/ws.conf.template
+++ b/templates/ws.conf.template
@@ -1,5 +1,5 @@
-location /faye {
-  proxy_pass http://$FAYE_IPADDR:9292;
+location /ws {
+  proxy_pass http://$WS_IPADDR:8080;
   proxy_http_version 1.1;
   proxy_set_header Upgrade \$http_upgrade;
   proxy_set_header Connection "Upgrade";
